<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_3"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@id/btn1"
        android:layout_marginStart="10dp"
        />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_5"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@id/btn1"
        android:layout_marginEnd="10dp"
        />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:layout_centerInParent="true"
        android:layout_alignBottom="@id/btn1"
        android:layout_marginBottom="45dp"
        />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn1"
        android:layout_centerInParent="true"
        android:layout_marginTop="45dp"
        android:text="@string/button_4" />


</RelativeLayout>